Closed Bug 258806 Opened 20 years ago Closed 19 years ago

it doesn't build if a patch isn't applied at nsModule.cpp

Categories

(Thunderbird :: Migration, defect)

x86
BeOS
defect
Not set
blocker

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: batuque, Assigned: mscott)

References

Details

Attachments

(2 obsolete files)

User-Agent:       Mozilla/5.0 (BeOS; U; BeOS BePC; en-US; rv:1.8a3) Gecko/20040829
Build Identifier: Mozilla/5.0 (BeOS; U; BeOS BePC; en-US; rv:1.8a3) Gecko/20040829

Dogbert is not needed to be build in a BeOS build, so nsModule.cpp in
mozilla/mail/components/build should get some defineds like this:

...
#if !defined(XP_BEOS)
#include "nsDogbertProfileMigrator.h"
#endif
...
#if !defined(XP_BEOS)
NS_GENERIC_FACTORY_CONSTRUCTOR(nsDogbertProfileMigrator)
#endif
...
#if !defined(XP_BEOS) 
 { "Netscape Communicator 4.x",
    NS_DOGBERTPROFILEMIGRATOR_CID,
    NS_MAILPROFILEMIGRATOR_CONTRACTID_PREFIX "dogbert",
    nsDogbertProfileMigratorConstructor },
#endif

Reproducible: Always
Steps to Reproduce:
1. Try to build Thunderbird
2.
3.

Actual Results:  
It doesn't build.

Expected Results:  
A Thunderbird build
Franxico, this patch doesn't look right.

These shouldn't be there:
+  { "Netscape 4.x Profile Migrator",
+    NS_DOGBERTPROFILEMIGRATOR_CID,
+    NS_BROWSERPROFILEMIGRATOR_CONTRACTID_PREFIX "dogbert",
+    nsDogbertProfileMigratorConstructor },

Maybe you should reget that file from CVS and redo the patch.
Attached patch patch to avoid dogbert (obsolete) — Splinter Review
Attachment #158494 - Attachment is obsolete: true
Comment on attachment 158537 [details] [diff] [review]
patch to avoid dogbert

review request
Attachment #158537 - Flags: review?(sergei_d)
add dependency
Depends on: 258801
Depends on: 258804
No longer depends on: 258801
Depends on: 258801
Comment on attachment 158537 [details] [diff] [review]
patch to avoid dogbert

r=sergei_d
Attachment #158537 - Flags: review?(sergei_d) → review+
What's the status here?
Status: UNCONFIRMED → NEW
Ever confirmed: true
I assume it's still there and needs fixing, but I don't work on Thunderbird.
Comment on attachment 158537 [details] [diff] [review]
patch to avoid dogbert

timeless, can you sr and checkin this?
Attachment #158537 - Flags: superreview?(timeless)
i'm not an sr, and see other comments.
Attachment #158537 - Flags: superreview?(timeless) → superreview?(mscott)
Attachment #158537 - Flags: superreview?(mscott) → superreview+
Comment on attachment 158537 [details] [diff] [review]
patch to avoid dogbert

mozilla/mail/components/build/nsModule.cpp 	1.3
Attachment #158537 - Attachment is obsolete: true
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: