Bug 258806 it doesn't build if a patch isn't applied at nsModule.cpp patch by fvincent@bol.com.br r=sergei_d sr=mscott